--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.3",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-promise-middleware": "^6.1.2"
   },
   "scripts": {
     "start": "npm-run-all --parallel client server",
