--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.3",
     "redux": "^4.0.5",
-    "redux-promise-middleware": "^6.1.2"
+    "redux-promise-middleware": "^6.1.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.1"
   },
   "scripts": {
     "start": "npm-run-all --parallel client server",
