--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.3",
     "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
     "redux-promise-middleware": "^6.1.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1"
   },
   "scripts": {
     "start": "npm-run-all --parallel client server",
+    "serve": "npm run build && serve -s build",
     "client": "react-scripts start",
     "server": "json-server --watch server/data.json --static server/static --port 3001",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:integration": "jest -c integration/jest.config.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -34,8 +37,10 @@
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.8.0",
     "jest-enzyme": "^7.0.1",
+    "jest-puppeteer": "^3.8.0",
     "json-server": "^0.14.2",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "puppeteer": "^1.11.0"
   },
   "proxy": "http://localhost:3001"
 }
