--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "2.1.3",
     "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4",
     "redux-promise-middleware": "^6.1.2",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.1"
+    "semantic-ui-react": "^2.0.1",
+    "style-loader": "^1.0.0",
+    "whatwg-fetch": "^3.5.0"
   },
   "scripts": {
     "start": "npm-run-all --parallel client server",
@@ -34,13 +35,29 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "8.0.4",
+    "css-loader": "^2.1.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.8.0",
+    "file-loader": "^6.2.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "jest-enzyme": "^7.0.1",
     "jest-puppeteer": "^3.8.0",
     "json-server": "^0.14.2",
+    "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
-    "puppeteer": "^1.11.0"
+    "puppeteer": "^1.11.0",
+    "sass-loader": "^10.1.0",
+    "serve": "^10.1.1",
+    "url-loader": "^4.1.1",
+    "webpack": "4.19.1",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.9"
   },
   "proxy": "http://localhost:3001"
 }
